--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -74,7 +74,7 @@
 #: {{zh-ant|真}}
 # [[falsehood]]; [[deception]]
 #: {{zh-x|真假|real and '''fake'''; authenticity}}
-#*: {{zh-x|假 作 真 時 真 亦 假，無 為{wéi} 有 處 有 還{huán} 無。|When '''falsehood''' stands for truth, truth likewise becomes '''false[hood]''', where naught be made to aught, aught changes into naught.|ref=Hongloumeng}}
+#*: {{zh-x|假 作 真 時 真 亦 假，無 為{wéi} 有 處 有 還{huán} 無。|When '''falsehood''' stands for truth, truth likewise becomes '''false[hood]'''; where naught be made to aught, aught changes into naught.|ref=Hongloumeng}}
 # [[if]]; [[assuming]]
 #: {{zh-x|假設|to suppose}}
 # {{surname|zh}}.
