Improved one slang definition (EN) <cut#68663115>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -82,8 +82,9 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 #: {{ux|en|The football player '''cut''' to his left to evade a tackle.}}
 # {{lb|en|transitive|intransitive}} To [[divide]] a [[pack]] of [[playing card]]s into two.
 #: {{ux|en|If you '''cut''' then I'll deal.}}
-# {{lb|en|transitive|slang}} To [[write]].
-#: {{ux|en|'''cut''' orders;&emsp; '''cut''' a check}}
+# {{lb|en|transitive|slang}} To [[make]] or [[negotiate]].
+#: {{ux|en|I'll '''cut''' a check for you.}}
+#: {{ux|en|I didn't deserve it, but he '''cut''' me a deal.}}
 # {{lb|en|transitive|slang}} To [[dilute]] or [[adulterate]] something, especially a recreational drug.
 #: {{ux|en|The best malt whiskies are improved if they are '''cut''' with a dash of water.}}
 #: {{ux|en|The bartender '''cuts''' his beer to save money and now it's all watery.}}
