--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -103,7 +103,7 @@ From {{inh|ja|ojp|sort=むかし|-}}. The ''muka'' portion derives from the {{m|
 #* {{RQ:Utsubo Monogatari|Toshikage}}<ref>{{R:Utsubo Monogatari 1}}</ref>
 #*: '''むかし'''、式部大輔、左大弁かけて清原の王ありけり。
 #: {{ja-usex-inline|'''昔'''と[[今]]|'''むかし''' と いま|the '''past''' and the present}}
-#: {{ja-usex-inline|'''昔'''の[[自分]]|'''むかし''' の じぶん|my '''past''' self}}
+#: {{ja-usex-inline|'''昔'''の[[自%分]]|'''むかし''' の じ%ぶん|my '''past''' self}}
 #: {{ja-usex-inline|'''昔'''からの[[友達]]|'''むかし''' から の ともだち|a [[longtime]] friend|lit=a friend since '''old times'''}}
 #: {{ja-usex-inline|'''昔'''に[[戻る]]|'''むかし''' に もどる|to return to the '''past'''}}
 # [[ancient]]
