--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -29,7 +29,7 @@ Oracle bone form: {{Han compound|𡿧|日|ls=ic|t1=disaster; floods|t2=sun}} –
 {{zh-pron
 |m=昔
 |c=sik1
-|h=pfs=sit
+|h=pfs=sit;gd=xid5
 |md=sék
 |mn=qz:siak/tw,xm,zz:sek
 |mn-t=sêg4/za2
