--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -124,8 +124,7 @@ From {{inh|en|enm|olyve}}, from {{der|en|fro|olive||olive, olive tree}}, from {{
 * Maori: {{t|mi|ōriwa}}
 * Middle English: {{t|enm|olyve}}
 * Middle Persian: {{t|pal|𐭦𐭩𐭲𐭩|ts=zayt}}
-* Mongolian:
-*: Cyrillic: {{t|mn|чидун жимс}}
+* Mongolian: {{t|mn|чидун жимс}}, {{t+|mn|олив}}
 * Moroccan Amazigh: {{t|zgh|ⵜⴰⵣⵉⵜⵓⵏⵜ|f|tr=tazitunt}} {{qualifier|countable singular}}
 * Ngizim: {{t|ngi|zatun}}
 * Norwegian: {{t|no|oliven}}
