--- a/en/坢/坢.13029.wikitext
+++ b/en/坢/坢.13029.wikitext
@@ -95,3 +95,15 @@
 
 ===References===
 * [https://hanja.dict.naver.com/#/entry/ccko/962ac71c6c354ec98f3734f71f7d87d4 Naver Hanja Dictionary: 坢]
+
+----
+
+==Tày==
+
+===Han character===
+{{head|tyz|Han character}}
+
+# {{tyz-Nom form of|bản}}
+
+===References===
+* {{r:tyz:tdcnt}}
