--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -272,6 +272,7 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 * Portuguese: {{t+|pt|Israel|m}}
 * Russian: {{t+|ru|Изра́иль|m}}, {{t+|ru|Израи́л|m}}, {{t+|ru|Исраэ́ль|m}}
 * Thai: {{t+|th|อิสราเอล}}
+* Westrobothnian: {{t|gmq-bot|Istral}}
 * Yiddish: {{t|yi|ישׂראל|m|tr=yisroel}}
 {{trans-bottom}}
 
