--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -475,6 +475,7 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 {{trans-top|battle}}
 * Afrikaans: {{t|af|geveg}}
 * Albanian: {{t+|sq|betejë|f}}
+* Arabic: {{t|ar|مَعْرَكَة}}
 * Armenian: {{t+|hy|մարտ}}
 * Azerbaijani: {{t+|az|döyüş}}
 * Basque: {{t|eu|gudu}}, {{t|eu|bataila}}
