--- a/en/t/The Netherlands.2110.wikitext
+++ b/en/t/The Netherlands.2110.wikitext
@@ -1,4 +1,6 @@
 ==English==
+===Pronunciation===
+* {{audio|en|LL-Q1860 (eng)-PerfectSoundWhatever-The Netherlands.wav|Audio (CA)}}
 
 ===Proper noun===
 {{en-proper noun|head=[[the|The]] [[Netherlands]]}}
