/* Derived terms */ <creep#68748505>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -55,15 +55,23 @@ The noun is derived from the verb.
 #* {{quote-book|en|year=2016|author=Sherika Moore|isbn=9781524503598|title=Been Hustlen|passage="Now you want the nigga out 'cause he '''creeping''' with his baby momma."}}
 
 ====Derived terms====
-{{der-top}}
-* {{l|en|becreep}}
-* {{l|en|creep out}}
-* {{l|en|creep up on}}
-* {{l|en|creeper}}
-* {{l|en|creeping crud}}
-* {{l|en|creepy}}, [[creepy-crawly]]
-* {{l|en|give someone the creeps}}
-{{der-bottom}}
+{{col4|en
+|becreep
+|creep out
+|creep up on
+|creeper
+|creeping Charlie
+|creeping crud
+|creeping eruption
+|creeping gromwell
+|creeping fig
+|creeping Jesus
+|creeping Jesus
+|creeping normality
+|creepy
+|creepy-crawly
+|give someone the creeps
+}}
 
 ====Translations====
 {{trans-see|to move slowly with the abdomen close to the ground|crawl}}
