--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -131,6 +131,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 * Gothic: {{t|got|𐌸𐌴𐌹𐍈𐍉|f}}
 * Greek: {{t+|el|βροντή|f}}
 * Greenlandic: {{t|kl|kalleq}}
+* Guaraní: {{t|gn|sunu}}
 * Haitian Creole: {{t|ht|loray}}
 * Hausa: {{t|ha|tarnatsa}}
 * Hebrew: {{t+|he|רַעַם|m|tr=ra'am}}
