--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -26,6 +26,7 @@ From {{der|en|frm|-}} {{m|fr|blonde|g=f}}. See {{m|en|blond}}.
 ====Derived terms====
 {{der3|en|
 |blonde bombshell
+|blonde joke
 |blonde moment
 |atomic blonde
 |bottle blonde
