--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -88,6 +88,7 @@ Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||co
 * German: {{t+|de|Mantel|m}}
 * Greek: {{t+|el|πανωφόρι|n}}, {{t+|el|παλτό|n}}
 *: Ancient: {{t|grc|ἀρνακίς|f}}, {{t|grc|ῥῆνιξ|f}}
+* Guaraní: {{t+|gn|ahoja}}
 * Hebrew: {{t+|he|מְעִיל|m|tr=meíl}}
 * Hindi: {{t+|hi|कोट|m}}
 * Hungarian: {{t+|hu|kabát}}
