--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -79,9 +79,9 @@ From {{com|en|united|kingdom}}, first attested from 1706.
 * Italian: {{t+|it|Regno Unito|m}}, {{t+|it|Regno Unito di Gran Bretagna e Irlanda del Nord|m}}
 * Japanese: {{t+|ja|英国|tr=えいこく, Eikoku}}, {{t+|ja|イギリス|tr=Igirisu}}, {{t+|ja|グレートブリテン及び北アイルランド連合王国|tr=Gurēto Buriten oyobi Kita Airurando rengō ōkoku}}, {{t+|ja|連合王国|tr=れんごうおうこく, Rengō ōkoku}}
 * Kalmyk: {{t|xal|Ниицәтә Нутг}}
-* Kazakh: {{t|kk|Біріккен Корольдік|alt=Бірікке́н Коро́льдік}}, {{t|kk|Құрама Патшалық|alt=Құрама́ Патшалы́қ}} {{q|rare}}, {{t|kk|Ұлыбритания және Солтүстік Ирландия Біріккен Корольдігі}}, {{t|kk|Біріккен Патшалық}}
-* Khmer: {{t|km|ចក្រភពអង់គ្លេស|tr=Châkrâphôp Ángklés}}, {{t|km|សហរាជាណាចក្រ|tr=Sâhâréachéanachâkr}}, {{t+|km|រាជាណាចក្ររួម|tr=Réachéanachakr Ruŏm}}
-* Korean: {{t+|ko|영국(英國)}}, {{t|ko|그레이트브리튼 북아일랜드 연합 왕국}}, {{t|ko|연합 왕국}}, {{t|ko|대브리텐 및 북아일랜드 련합 왕국}} {{qualifier|North Korea}}, {{t|ko|련합 왕국}} {{qualifier|North Korea}}
+* Kazakh: {{t|kk|Біріккен Корольдік}}, {{t|kk|Құрама Патшалық}} {{q|rare}}, {{t|kk|Ұлыбритания және Солтүстік Ирландия Біріккен Корольдігі}}, {{t|kk|Біріккен Патшалық}}
+* Khmer: {{t|km|ចក្រភពអង់គ្លេស}}, {{t|km|សហរាជាណាចក្រ}}, {{t+|km|រាជាណាចក្ររួម}}
+* Korean: {{t+|ko|^영국(英國)}}, {{t|ko|^그레이트브리튼 북아일랜드 연합 왕국}}, {{t|ko|^연합 왕국}}, {{t|ko|^대브리텐 및 북아일랜드 련합 왕국}} {{qualifier|North Korea}}, {{t|ko|^련합 왕국}} {{qualifier|North Korea}}
 * Kurdish:
 *: Central Kurdish: {{t|ckb|شانشینی یەکگرتوو|tr=şanşînî yekgrtû}}
 *: Northern Kurdish: {{t+|kmr|Keyaniya Yekbûyî}}
@@ -105,8 +105,8 @@ From {{com|en|united|kingdom}}, first attested from 1706.
 * North Frisian: {{t|frr|Feriind Kiningrik}}
 * Northern Sami: {{t|se|Ovttastuvvan gonagasriika}}
 * Norwegian:
-*: Bokmål: {{t|no|Det forente kongerike Storbritannia og Nord-Irland}}
-*: Nynorsk: {{t|nn|Det sameinte kongeriket Storbritannia og Nord-Irland}}
+*: Bokmål: {{t|no|Det forente kongerike Storbritannia og Nord-Irland|n}}
+*: Nynorsk: {{t|nn|Det sameinte kongeriket Storbritannia og Nord-Irland|n}}
 * Occitan: {{t+|oc|Reialme Unit|m}}
 * Ossetian: {{t|os|Иугонд Паддзахад}}
 * Pashto: {{t|ps|د سترې بریتانيې او شمالي ايرلينډ متحد سلطنت|tr=da sathre bareethanye aw shamalai ieralaend mathhd salathnth}}
