/* Translations */ <United Kingdom#68990458>

--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -69,7 +69,7 @@ From {{com|en|united|kingdom}}, first attested from 1706.
 * Hausa: {{t+|ha|Birtaniya}}
 * Hawaiian: {{t|haw|Aupuni Mōʻī Hui Pū ʻia}}
 * Hebrew: {{t|he|הַמַמְלָכָה הַמְאֻחֶדֶת|tr=ha-mamlakha ha-meukhedet}}
-* Hindi: {{t|hi|यूनाइटेड किंगडम}}, {{t+|hi|संयुक्त राजशाही}}
+* Hindi: {{t|hi|यूनाइटेड किंगडम|m}}, {{t+|hi|संयुक्त राजशाही|m}}
 * Hungarian: {{t+|hu|Egyesült Királyság}}, {{t+|hu|Nagy-Britannia és Észak-Írország Egyesült Királysága}}
 * Icelandic: {{t|is|Hið sameinaða konungsríki|n}}
 * Ido: {{t+|io|Unionita Rejio}}
@@ -148,7 +148,7 @@ From {{com|en|united|kingdom}}, first attested from 1706.
 * Turkish: {{t+|tr|Birleşik Krallık}}
 * Turkmen: {{t|tk|Birleşen Patyşalyk}}
 * Ukrainian: {{t|uk|Сполу́чене Королі́вство|n}}
-* Urdu: {{t|ur|مملکت متحدہ|tr=mamlakat-i muttahidā}}, {{t|ur|یونائٹڈ کنگڈم|tr=yūnāiṭeḍ kiṅgḍam}}
+* Urdu: {{t|ur|مملکت متحدہ|tr=mamlakat-i muttahidā}}, {{t|ur|یونائٹڈ کنگڈم|m|tr=yūnāiṭeḍ kiṅgḍam}}
 * Uyghur: {{t|ug|بۈيۈك برىتانىيە ۋە شىمالىي ئىرلاندىيە بىرلەشمە پادىشاھلىقى}}
 * Uzbek: {{t+|uz|Birlashgan Qirollik}}
 * Vietnamese: {{t+|vi|Vương quốc Anh}}, {{t+|vi|Anh Quốc}} ({{t|vi|英國}})
