--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -16,6 +16,7 @@ From {{inh|en|enm|finden}}, from {{inh|en|ang|findan}}, from {{inh|en|gmw-pro|*f
 {{en-verb|finds|finding|found|past2=fand|past2_qual=dialectal|past_ptc2=founden|past_ptc2_qual=archaic}}
 
 # {{lb|en|transitive}} To encounter or discover by accident; to happen upon.
+#: {{ux|en|I '''found''' this shell on the beach}}
 #* {{RQ:Shakespeare Julius Caesar|II|i|passage=Searching the window for a flint, I '''found'''/This paper, thus sealed up.}}
 #* '''a. 1667''', {{w|Abraham Cowley}}, ''The Request''
 #*: Among the Woods and Forests thou art '''found'''.
