--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -330,7 +330,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 # {{lb|en|heading}} ''To obtain or experience''
 
 ====Conjugation====
-{{en-conj-simple|past=caught|past2=catched|past2_qual=nonstandard}}
+{{en-conj|es|old=1|past=caught|past2=catched|past2_qual=note1|past_2sg_old=caughtest|past_2sg_old2=catchedst|note1=Nonstandard.}}
 
 ====Usage notes====
 * The older past and passive participle {{m|en|catched}} is now nonstandard.
