--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -35,7 +35,7 @@ Cognate with {{cog|sco|chuise}}, {{m|sco|cheese||to choose}}, {{cog|frr|kese||to
 * This is a [[catenative]] verb that takes the ''to infinitive''. See [[Appendix:English catenative verbs]]
 
 =====Conjugation=====
-{{en-conj-simple|past=chose|past_ptc=chosen|past2=choosed|past2_qual=nonstandard|past_ptc2=choosed|past_ptc2_qual=nonstandard|past_ptc3=chose|past_ptc3_qual=now colloquial|stem=choos}}
+{{en-conj|stem=choos|old=1|past=chose|past_ptc=chosen|past2=choosed|past2_qual=note1|past_2sg2_old2=choosedst|past_ptc2=choosed|past_ptc2_qual=note1|past_ptc3=chose|past_ptc3_qual=note2|note1=Nonstandard.|note2=Colloquial.}}
 
 =====Related terms=====
 * {{l|en|choice}}
