--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -56,7 +56,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fÄ“lan}}, from {{inh|en|gmw-pro|*fÅ
 * In senses 2, 3, and 5, this is generally a [[stative verb]] that rarely takes the continuous inflection. See [[:Category:English stative verbs]]
 
 =====Conjugation=====
-{{en-conj-simple|past=felt|past_2sg_old2=feltest}}
+{{en-conj|old=1|past=felt|past_2sg_old2=feltest}}
 
 =====Derived terms=====
 {{col4|en
