--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -63,7 +63,7 @@ From {{inh|en|enm|founden}}, from {{der|en|fro|founder}} (Modern French: {{m|fr|
 # {{lb|en|transitive}} To [[begin]] [[building]]. {{rfex|en}}
 
 =====Conjugation=====
-{{en-conj-simple}}
+{{en-conj|old=1}}
 
 =====Synonyms=====
 * {{sense|to start organization}} {{l|en|establish}}
