t+ms:[[count]] t-balance t+ur:[[کاؤُنْٹ]] t+az:[[qraf]] t+az:[[kont]] t+uz:[[graf]] t+sq:[[kont]] ([[WT:EDIT|Assisted]]) <count#69025880>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -385,9 +385,11 @@ From {{inh|en|enm|counte}}, from {{der|en|xno|conte}} and {{der|en|fro|comte||co
 
 =====Translations=====
 {{trans-top|ruler of a county (male)}}
+* Albanian: {{t+|sq|kont|m}}
 * Arabic: {{t|ar|كُونْت|m}}
 * Armenian: {{t+|hy|կոմս}}
 * Asturian: {{t|ast|conde|m}}
+* Azerbaijani: {{t|az|qraf}}, {{t|az|kont}}
 * Belarusian: {{t|be|граф|m}}
 * Breton: {{t+|br|kont|m}}
 * Bulgarian: {{t|bg|граф|m}}
@@ -417,12 +419,13 @@ From {{inh|en|enm|counte}}, from {{der|en|xno|conte}} and {{der|en|fro|comte||co
 * Irish: {{t|ga|cunta|m}}, {{t|ga|cuntaí|m-p}}
 * Italian: {{t+|it|conte|m}}
 * Japanese: {{t+|ja|伯爵|tr=はくしゃく, hakushaku}}
-{{trans-mid}}
 * Khmer: {{t+|km|ព្រះ|tr=preah}}
+{{trans-mid}}
 * Korean: {{t+|ko|백작(伯爵)}}
 * Latin: {{q|Medieval}} {{t|la|comes|m}}
 * Latvian: {{t|lv|grāfs|m}}
 * Lithuanian: {{t|lt|grafas|m}}
+* Malay: {{t|ms|count}}
 * Manchu: {{t|mnc|ᠪᡝ}}
 * Macedonian: {{t|mk|гроф|m}}
 * Marathi: {{t|mr|काउन्ट|m}}
@@ -448,6 +451,8 @@ From {{inh|en|enm|counte}}, from {{der|en|xno|conte}} and {{der|en|fro|comte||co
 * Thai: {{t|th|เคานต์}}
 * Turkish: {{t+|tr|kont|m}}
 * Ukrainian: {{t|uk|граф|m}}
+* Urdu: {{t|ur|کاؤُنْٹ|m|tr=kāuṇṭ}}
+* Uzbek: {{t+|uz|graf}}
 * Vietnamese: {{t+|vi|bá tước}}
 * Yiddish: {{t|yi|גראַף|m}}, {{t|yi|כראַביע|m}} {{qualifier|Poland}}
 {{trans-bottom}}
