--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -395,7 +395,7 @@ From {{inh|en|enm|counte}}, from {{der|en|xno|conte}} and {{der|en|fro|comte||co
 * Bulgarian: {{t|bg|граф|m}}
 * Catalan: {{t+|ca|comte|m}}
 * Chinese:
-*: Mandarin: {{t+|cmn|伯爵|tr=bójué|sc=Hani}}
+*: Mandarin: {{t+|cmn|伯爵|tr=bójué}}
 * Czech: {{t+|cs|hrabě|m}}
 * Danish: {{t|da|greve|c}}
 * Dutch: {{t+|nl|graaf|m}}
@@ -411,7 +411,7 @@ From {{inh|en|enm|counte}}, from {{der|en|xno|conte}} and {{der|en|fro|comte||co
 * German: {{t+|de|Graf|m}}
 * Greek: {{t+|el|κόμης|m}}
 * Hawaiian: {{t|haw|kauna}}
-* Hebrew: {{t|he|רוזן|m|tr=rozen}}
+* Hebrew: {{t|he|רוֹזֵן|m|tr=rozén}}
 * Hindi: {{t+|hi|कौंट|m}}
 * Hungarian: {{t+|hu|gróf}}
 * Icelandic: {{t+|is|greifi|m}}
@@ -419,7 +419,7 @@ From {{inh|en|enm|counte}}, from {{der|en|xno|conte}} and {{der|en|fro|comte||co
 * Irish: {{t|ga|cunta|m}}, {{t|ga|cuntaí|m-p}}
 * Italian: {{t+|it|conte|m}}
 * Japanese: {{t+|ja|伯爵|tr=はくしゃく, hakushaku}}
-* Khmer: {{t+|km|ព្រះ|tr=preah}}
+* Khmer: {{t+|km|ព្រះ}}
 {{trans-mid}}
 * Korean: {{t+|ko|백작(伯爵)}}
 * Latin: {{q|Medieval}} {{t|la|comes|m}}
@@ -441,8 +441,8 @@ From {{inh|en|enm|counte}}, from {{der|en|xno|conte}} and {{der|en|fro|comte||co
 * Russian: {{t+|ru|граф|m}}
 * Scottish Gaelic: {{t|gd|iarla|m}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|гроф|m}}
-*: Roman: {{t+|sh|grof|m}}
+*: Cyrillic: {{t|sh|гро̏ф|m}}
+*: Roman: {{t+|sh|grȍf|m}}
 * Slovak: {{t+|sk|gróf|m}}
 * Slovene: {{t+|sl|grof|m}}
 * Spanish: {{t+|es|conde|m}}
