t+kk:[[граф]] t+ky:[[граф]] t+tg:[[граф]] t+tk:[[graf]] t-balance t+bn:[[কাউণ্ট]] ([[WT:EDIT|Assisted]]) <count#69026583>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -391,6 +391,7 @@ From {{inh|en|enm|counte}}, from {{der|en|xno|conte}} and {{der|en|fro|comte||co
 * Asturian: {{t|ast|conde|m}}
 * Azerbaijani: {{t|az|qraf}}, {{t|az|kont}}
 * Belarusian: {{t|be|граф|m}}
+* Bengali: {{t|bn|কাউণ্ট}}
 * Breton: {{t+|br|kont|m}}
 * Bulgarian: {{t|bg|граф|m}}
 * Catalan: {{t+|ca|comte|m}}
@@ -419,9 +420,11 @@ From {{inh|en|enm|counte}}, from {{der|en|xno|conte}} and {{der|en|fro|comte||co
 * Irish: {{t|ga|cunta|m}}, {{t|ga|cuntaí|m-p}}
 * Italian: {{t+|it|conte|m}}
 * Japanese: {{t+|ja|伯爵|tr=はくしゃく, hakushaku}}
+* Kazakh: {{t|kk|граф}}
 * Khmer: {{t+|km|ព្រះ}}
 {{trans-mid}}
 * Korean: {{t+|ko|백작(伯爵)}}
+* Kyrgyz: {{t|ky|граф}}
 * Latin: {{q|Medieval}} {{t|la|comes|m}}
 * Latvian: {{t|lv|grāfs|m}}
 * Lithuanian: {{t|lt|grafas|m}}
@@ -448,8 +451,10 @@ From {{inh|en|enm|counte}}, from {{der|en|xno|conte}} and {{der|en|fro|comte||co
 * Spanish: {{t+|es|conde|m}}
 * Swedish: {{t+|sv|greve}}
 * Tagalog: {{t+|tl|konde}}
+* Tajik: {{t+|tg|граф}}
 * Thai: {{t|th|เคานต์}}
 * Turkish: {{t+|tr|kont|m}}
+* Turkmen: {{t|tk|graf}}
 * Ukrainian: {{t|uk|граф|m}}
 * Urdu: {{t|ur|کاؤُنْٹ|m|tr=kāuṇṭ}}
 * Uzbek: {{t+|uz|graf}}
