--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -449,7 +449,7 @@ From {{inh|en|enm|counte}}, from {{der|en|xno|conte}} and {{der|en|fro|comte||co
 * Slovak: {{t+|sk|gróf|m}}
 * Slovene: {{t+|sl|grof|m}}
 * Spanish: {{t+|es|conde|m}}
-* Swedish: {{t+|sv|greve}}
+* Swedish: {{t+|sv|greve|c}}
 * Tagalog: {{t+|tl|konde}}
 * Tajik: {{t+|tg|граф}}
 * Thai: {{t|th|เคานต์}}
@@ -458,7 +458,7 @@ From {{inh|en|enm|counte}}, from {{der|en|xno|conte}} and {{der|en|fro|comte||co
 * Ukrainian: {{t|uk|граф|m}}
 * Urdu: {{t|ur|کاؤُنْٹ|m|tr=kāuṇṭ}}
 * Uzbek: {{t+|uz|graf}}
-* Vietnamese: {{t+|vi|bá tước}}
+* Vietnamese: {{t+|vi|bá tước}} ({{t|vi|伯爵}})
 * Yiddish: {{t|yi|גראַף|m}}, {{t|yi|כראַביע|m}} {{qualifier|Poland}}
 {{trans-bottom}}
 
