--- a/en/坴/坴.13047.wikitext
+++ b/en/坴/坴.13047.wikitext
@@ -5,7 +5,8 @@
 {{Han char|rn=32|rad=土|as=05|sn=8|four=40104|canj=GCG|ids=⿳土八土(G),⿳土⿰丿㇄土(HT),⿱圥土(JK)}}
 
 ====Derived characters====
-* [[睦]], [[陸]], [[稑]], [[逵]], [[鵱]], [[燅]], [[埶]], [[鯥]], [[𪂚]], [[𡎐]]
+* {{l|mul|[[陸]], [[睦]], [[稑]], [[鯥]], [[𪂚]]}}
+* {{l|mul|[[逵]], [[埶]], [[𡎐]], [[燅]], [[鵱]]}}
 
 ====References====
 * {{Han ref|kx=0226.340|dkj=04989|dj=0462.110|hdz=10433.040|uh=5774|ud=22388|bh=CBFD|bd=52221}}
