--- a/en/坴/坴.13047.wikitext
+++ b/en/坴/坴.13047.wikitext
@@ -5,8 +5,8 @@
 {{Han char|rn=32|rad=土|as=05|sn=8|four=40104|canj=GCG|ids=⿳土八土(G),⿳土⿰丿㇄土(HT),⿱圥土(JK)}}
 
 ====Derived characters====
-* {{l|mul|[[陸]], [[睦]], [[稑]], [[鯥]], [[𪂚]]}}
-* {{l|mul|[[逵]], [[埶]], [[𡎐]], [[燅]], [[鵱]]}}
+* {{l|mul|[[㓐]], [[𠵕]], [[𭎩]], [[㛬]], [[𰎥]], [[𢯅]], [[淕]], [[陸]], [[𬀻]], [[𣔭]], [[𪸷]], [[𪻧]], [[𦜣]], [[𪽘]], [[睦]], [[𥓪]], [[𥚊]], [[稑]], [[𦁪]], [[𧌉]], [[𰋔]], [[𢑫]], [[踛]], [[䡜]], [[錴]], [[𤏝]], [[𩣱]], [[鯥]]([[𱇶]]), [[𪂚]]}}
+* {{l|mul|[[𫸒]], [[逵]], [[勎]], [[埶]], [[𡎐]], [[𤭝]], [[𨿲]], [[龳]], [[燅]], [[鵱]]([[𱊀]]), [[𮐦]]}}
 
 ====References====
 * {{Han ref|kx=0226.340|dkj=04989|dj=0462.110|hdz=10433.040|uh=5774|ud=22388|bh=CBFD|bd=52221}}
