--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -14,18 +14,20 @@ From {{inh|en|enm|finden}}, from {{inh|en|ang|findan}}, from {{inh|en|gmw-pro|*f
 ===Verb===
 [[File:Nymphs finding the Head of Orpheus.jpg|thumb|upright|"Nymphs Finding the Head of Orpheus", a painting by {{w|John William Waterhouse}}]]
 {{en-verb|finds|finding|found|past2=fand|past2_qual=dialectal|past_ptc2=founden|past_ptc2_qual=archaic}}
-
-# {{lb|en|transitive}} To encounter or discover by accident; to happen upon.
-#: {{ux|en|I '''found''' this shell on the beach}}
-#* {{RQ:Shakespeare Julius Caesar|II|i|passage=Searching the window for a flint, I '''found'''/This paper, thus sealed up.}}
-#* '''a. 1667''', {{w|Abraham Cowley}}, ''The Request''
-#*: Among the Woods and Forests thou art '''found'''.
-# {{lb|en|transitive}} To [[encounter]] or [[discover]] something being [[search]]ed for; to [[locate]].
-#: {{ux|en|I '''found''' my car keys. They were under the couch.}}
-#* {{RQ:Churchill Celebrity|chapter=2|passage=I had occasion to make a somewhat long business trip to Chicago, and on my return […] I '''found''' Farrar awaiting me in the railway station. He smiled his wonted fraction by way of greeting, and finally leading me to his buggy, turned and drove out of town.}}
-#* {{RQ:Maxwell Mirror and the Lamp|chapter=10|passage=It was a joy to snatch some brief respite, and '''find''' himself in the rectory drawing–room. Listening here was as pleasant as talking; just to watch was pleasant.}}
-#* {{quote-journal|en|date=2013-07-20|volume=408|issue=8845|magazine={{w|The Economist}}|title=[http://www.economist.com/news/science-and-technology/21581981-what-pollution-some-opportunity-others-welcome-plastisphere Welcome to the plastisphere]|passage=
+# To locate
+## {{lb|en|transitive}} To encounter or discover by accident; to happen upon.
+##: {{ux|en|I '''found''' this shell on the beach}}
+##* {{RQ:Shakespeare Julius Caesar|II|i|passage=Searching the window for a flint, I '''found'''/This paper, thus sealed up.}}
+##* '''a. 1667''', {{w|Abraham Cowley}}, ''The Request''
+##*: Among the Woods and Forests thou art '''found'''.
+## {{lb|en|transitive}} To [[encounter]] or [[discover]] something being [[search]]ed for; to [[locate]].
+##: {{ux|en|I '''found''' my car keys. They were under the couch.}}
+##* {{RQ:Churchill Celebrity|chapter=2|passage=I had occasion to make a somewhat long business trip to Chicago, and on my return […] I '''found''' Farrar awaiting me in the railway station. He smiled his wonted fraction by way of greeting, and finally leading me to his buggy, turned and drove out of town.}}
+##* {{RQ:Maxwell Mirror and the Lamp|chapter=10|passage=It was a joy to snatch some brief respite, and '''find''' himself in the rectory drawing–room. Listening here was as pleasant as talking; just to watch was pleasant.}}
+##* {{quote-journal|en|date=2013-07-20|volume=408|issue=8845|magazine={{w|The Economist}}|title=[http://www.economist.com/news/science-and-technology/21581981-what-pollution-some-opportunity-others-welcome-plastisphere Welcome to the plastisphere]|passage=
 Plastics are energy-rich substances, which is why many of them burn so readily. Any organism that could unlock and use that energy would do well in the Anthropocene. Terrestrial bacteria and fungi which can manage this trick are already familiar to experts in the field. Dr Mincer and Dr Amaral-Zettler '''found''' evidence of them on their marine plastic, too.}}
+## {{lb|en|ditransitive}} Locate on behalf of another
+##: {{ux|en|I '''found''' you a new place to live}}
 # {{lb|en|ditransitive}} To discover by study or experiment direct to an object or end.
 #: {{ux|en|Water is '''found''' to be a compound substance.}}
 # {{lb|en|transitive}} To gain, as the object of desire or effort.
