--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -238,7 +238,8 @@ Gender changed by influence from {{m|da|mark}}.
 {{rel-bottom}}
 
 ===Etymology 2===
-From {{der|da|de|Feld}}, from {{der|da|goh|feld}}, from {{der|da|ine-pro|*pelh₂-||flat}}.
+{{dercat|da|gem-pro|ine-pro}}
+From {{der|da|de|Feld}}, from {{der|da|goh|feld}}, from {{der|da|gmw-pro|*felþu}}.
 
 ====Noun====
 {{da-noun|et|er}}
