/* Verb */ added quote <pull#69127516>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -46,6 +46,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 # {{lb|en|construction}} To obtain (a permit) from a regulatory authority.
 #: {{ux|en|It's the contractor's responsibility to '''pull''' the necessary permits before starting work.}}
 # {{lb|en|transitive|informal}} To [[do]] or [[perform]].
+#* {{quote-video game|en|year=1995|developer=[[w:HAL Laboratory|HAL Laboratory]]|publisher=[[w:Nintendo|Nintendo]]|title=[[w:EarthBound|EarthBound]]|platform=[[w:Super Nintendo Entertainment System|Super Nintendo Entertainment System]]|text=What are you trying to '''pull''', anyway? You say you want to sell, but you have nothing to offer?! You've got some nerve, kid!}}
 #: {{ux|en|He regularly '''pulls''' 12-hour days, sometimes 14.}}
 #: {{ux|en|You'll be sent home if you '''pull''' another stunt like that.}}
 # {{senseid|en|get one over or emulate}} {{lb|en|with 'a' and the name of a person, place, event, etc.}} To [[copy]] or [[emulate]] the actions or [[behaviour]] that is associated with the person or thing mentioned.
