--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -564,11 +564,12 @@ The verb became irregular, possibly under the influence of the semantically simi
 * Finnish: {{t+|fi|saada}}
 * French: {{t+|fr|attraper}}, {{qualifier|colloquial}} {{t+|fr|choper}}
 * German: {{t+|de|einfangen}}
-{{trans-mid}}
 * Hungarian: {{t+|hu|elkap}}
+{{trans-mid}}
 * Japanese: {{t+|ja|罹る|tr=kakaru}}
 * Khmer: {{t-needed|km}}
 * Latin: {{t|la|nanciscor}}
+* Malay: {{t-needed|ms}}
 * Russian: {{t+|ru|подхва́тывать|impf|sc=Cyrl}}, {{t+|ru|подхвати́ть|pf|sc=Cyrl}}, {{t+|ru|подцепля́ть|impf|sc=Cyrl}}, {{t+|ru|подцепи́ть|pf|sc=Cyrl}}
 * Spanish: {{t+|es|pillar}}, {{t+|es|coger}}, {{t+|es|agarrar}}
 * Thai: {{t-needed|th}}
