--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -17,6 +17,19 @@ The noun is derived from the verb.
 # {{lb|en|intransitive}} To move slowly with the [[abdomen]] close to the ground.
 #: {{uxi|en|Lizards and snakes '''crept''' over the ground.}}
 #* {{quote-book|en|year=1922|author=Margery Williams|authorlink=Margery Williams|title=[[w:The Velveteen Rabbit|The Velveteen Rabbit]]|passage=One evening, while the Rabbit was lying there alone, watching the ants that ran to and fro between his velvet paws in the grass, he saw two strange beings '''creep''' out of the tall bracken near him.}}
+#* {{quote-book
+|en
+|year=1994
+|chapter=On the Huai River
+|title=A Drifting Boat: An Anthology of Chinese Zen Poetry
+|url=https://archive.org/details/driftingboatanth0000unse/
+|location=[[Fredonia]], NY
+|publisher={{w|White Pine Press}}
+|ISBN=1-877727-37-7
+|OCLC=31359855
+|page=138
+|pageurl=https://archive.org/details/driftingboatanth0000unse/page/138/
+|text=Reed tips face the dawn<br>shivering in the autumn wind<br>At P'u-k'ou the winter tide<br>has not yet come<br>Sunrise on the sandy bank<br>pocked with narrow caves<br>Pale frogs and dark crabs<br>'''creep''' without end.}}
 #: {{syn|en|crawl}}
 # {{lb|en|intransitive}} Of [[plant]]s, to grow across a surface rather than upwards.
 # {{lb|en|intransitive}} To move slowly and quietly in a particular direction.
