t+gun:[[aguai]] ([[WT:EDIT|Assisted]]) <plum#69152980>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -290,6 +290,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Maltese: {{t|mt|għanbaqar}}
 * Manx: {{t|gv|plumbis|m}}
 * Maori: {{t+|mi|paramu}}
+* Mbyá Guaraní: {{t|gun|aguai}}
 * Middle English: {{t|enm|plomme}}, {{t|enm|prune}}
 * Middle High German: {{t|gmh|pflūme}}, {{t|gmh|pfrūme}}
 * Navajo: {{t|nv|chʼil naʼatłʼoʼiitsoh}}
