--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -12,6 +12,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 
 ===Pronunciation===
 * {{IPA|en|/ˈstʌmək/}}
+* {{a|Aus}} {{IPA|en|/ˈstɐmək/|/ˈstɐmɪk/}}
 * {{audio|en|en-us-stomach.ogg|Audio (US)}}
 * {{rhymes|en|ʌmək|s=2}}
 
