t+blt:[[ꪡ꫁ꪱꪵꪠ꫁]] t+shn:[[ၽႃႉလင်]] ([[WT:EDIT|Assisted]]) <thunder#69182854>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -214,6 +214,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|гром|m}}, {{t|sh|грмљавина|f}}
 *: Roman: {{t+|sh|grom|m}}, {{t+|sh|grmljavina|f}}
+* Shan: {{t|shn|ၽႃႉလင်}}
 * Sicilian: {{t+|scn|tronu|m}}
 * Sidamo: {{t|sid|banqo}}
 * Sinhalese: {{t|si|විදුලි කෙටීම}}
@@ -228,6 +229,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 * Swedish: {{t+|sv|åska|c}}, {{t|sv|([[åsk]]) [[smäll]]|c}}, {{t+|sv|dunder|c}}
 * Tabasaran: {{t|tab|гургум}}
 * Tagalog: {{t|tl|kulog}}
+* Tai Dam: {{t|blt|ꪡ꫁ꪱꪵꪠ꫁|tr=ꞌphạ phẻ}}
 * Tajik: {{t|tg|тундар}}, {{t+|tg|раъд}}
 * Tamil: {{t+|ta|இடி}}
 * Taos: {{t|twf|nąłàcit’ə́otuna}}
