--- a/en/側/側.11140.wikitext
+++ b/en/側/側.11140.wikitext
@@ -5,6 +5,9 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=22200|canj=OBCN|ids=⿰亻則}}
 
+====Derived characters====
+* {{l|mul|[[𨶨]]}}
+
 ====References====
 {{Han ref|kx=0111.340|dkj=00897|dj=0238.060|hdz=10189.120|uh=5074}}
 
