Added 1 derived character (𭇵) <圻#69232989>

--- a/en/圻/圻.12990.wikitext
+++ b/en/圻/圻.12990.wikitext
@@ -5,6 +5,9 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=42121|canj=GHML|ids=⿰土斤}}
 
+====Derived characters====
+* {{l|mul|[[𭇵]]}}
+
 ===Further reading===
 * {{Han ref|kx=0224.190|dkj=04903|dj=0459.070|hdz=10423.070|uh=573B|ud=22331|bh=A7A6|bd=42918}}
 
