--- a/en/圽/圽.12992.wikitext
+++ b/en/圽/圽.12992.wikitext
@@ -4,6 +4,9 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=GPHH|ids=⿰土勿}}
 
+====Derived characters====
+* {{l|mul|[[𬫔]]}}
+
 ===Further reading===
 * {{Han ref|kx=0224.210|dkj=04905|dj=0459.090|hdz=10425.030|uh=573D|ud=22333}}
 
