--- a/en/坑/坑.13012.wikitext
+++ b/en/坑/坑.13012.wikitext
@@ -6,6 +6,9 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=40117|canj=GYHN|ids=⿰土亢}}
 
+====Derived characters====
+* {{l|mul|[[𡷲]]}}
+
 ===Further reading===
 * {{Han ref|kx=0226.010|dkj=04932|dj=0460.080|hdz=10426.090|uh=5751|ud=22353|bh=A77C|bd=42876}}
 
