Added 1 derived character (𣶝) <坥#69238496>

--- a/en/坥/坥.13032.wikitext
+++ b/en/坥/坥.13032.wikitext
@@ -4,6 +4,9 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=GBM|ids=⿰土且}}
 
+====Derived characters====
+* {{l|mul|[[𣶝]]}}
+
 ====References====
 * {{Han ref|kx=0226.170|dkj=04970|dj=0461.290|hdz=10431.040|uh=5765|ud=22373}}
 
