--- a/en/i/ich.12974.wikitext
+++ b/en/i/ich.12974.wikitext
@@ -11,7 +11,7 @@ From {{inh|en|enm|ich}}, from {{inh|en|ang|iċ}}, {{m|ang|iċċ|t=I|pos=pronoun}
 * {{l|en|ch-}}
 
 ====Pronunciation====
-* {{IPA|en|/itʃ/|/ɪtʃ/}}
+* {{IPA|en|/it͡ʃ/|/ɪt͡ʃ/}}
 * {{rhymes|en|itʃ|ɪtʃ|s=1}}
 * {{homophones|en|each|itch}}
 
