--- a/en/愧/愧.15674.wikitext
+++ b/en/愧/愧.15674.wikitext
@@ -5,6 +5,9 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=96013|canj=PHUI|ids=⿰忄鬼}}
 
+====Derived characters====
+* {{l|mul|[[𫻣]]}}
+
 ====References====
 * {{Han ref|kx=0396.080|dkj=10982|dj=0734.150|hdz=42329.110|uh=6127|ud=24871|bh=B75C|bd=46940}}
 
