--- a/en/愩/愩.15676.wikitext
+++ b/en/愩/愩.15676.wikitext
@@ -4,6 +4,9 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=91086|canj=PMBC,XPMBC|ids=⿰忄貢}}
 
+====Derived characters====
+* {{l|mul|[[𢣁]]}}
+
 ====References====
 {{Han ref|kx=0396.100|dkj=10984|dj=0734.170|hdz=42335.130|uh=6129}}
 
