--- a/en/旫/旫.16915.wikitext
+++ b/en/旫/旫.16915.wikitext
@@ -7,6 +7,9 @@
 # [[dark]]
 # [[night]]
 
+====Derived characters====
+* {{l|mul|[[𤈌]]}}
+
 ====References====
 * {{Han ref|kx=0489.150|dkj=13745|dj=0850.120|hdz=21486.030|uh=65EB|ud=26091}}
 * [http://chardb.iis.sinica.edu.tw/char/U+65EB International Encoded Han Character and Variants Database]
