Added 1 derived character (𦱗) <旹#69255819>

--- a/en/旹/旹.16929.wikitext
+++ b/en/旹/旹.16929.wikitext
@@ -4,6 +4,9 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=UMA|ids=⿱㞢日}}
 
+====Derived characters====
+* {{l|mul|[[𦱗]]}}
+
 ====References====
 {{Han ref|kx=0490.230|dkj=13773|dj=0851.230|hdz=21496.090|uh=65F9}}
 
