Added 1 derived character (𩃛) <昑#69255822>

--- a/en/昑/昑.16953.wikitext
+++ b/en/昑/昑.16953.wikitext
@@ -6,6 +6,9 @@
 
 # [[bright]]
 
+====Derived characters====
+* {{l|mul|[[𩃛]]}}
+
 ====References====
 * {{Han ref|kx=0491.210|dkj=13811|dj=0854.050|hdz=21491.040|uh=6611|ud=26129|bh=CCCF|bd=52431}}
 
