--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -11,6 +11,9 @@ There are minor differences in where the last stroke of the top component (top-l
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=50603|canj=QKA|ids=⿱𡗗日}}
 
+====Usage notes====
+* This character is not to be confused with {{l|mul|舂}} (<code>U+8202</code>) which is visually similar but unrelated.
+
 ====Derived characters====
 * {{l|mul|[[偆]], [[㖺]], [[堾]], [[媋]], [[𢝣]], [[湷]], [[𬌸]], [[𬯌]], [[暙]], [[䐏]], [[椿]], [[瑃]], [[𨕌]], [[㿤]], [[睶]], [[𬓉]], [[𮄵]], [[蝽]], [[賰]]([[䞐]]), [[踳]], [[𨩃]], [[䮞]]([[𩨁]]), [[鰆]]([[䲠]]), [[𪂹]], [[𠝩]], [[萶]], [[箺]], [[䦮]], [[𩄄]], [[鬊]], [[惷]], [[𣕮]], [[𭾇]], [[𪃣]], [[蠢]], [[𩯥]]}}
 
