--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -351,6 +351,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Slovak: {{t|sk|nález}}
 * Spanish: {{t+|es|hallazgo|m}}
 * Swedish: {{t+|sv|fynd|n}}
+* Turkish: {{t+|tr|buluntu}}
 {{trans-bottom}}
 
 {{trans-top|act of finding}}
