--- a/en/坎/坎.13009.wikitext
+++ b/en/坎/坎.13009.wikitext
@@ -5,6 +5,9 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=47182|canj=GNO|ids=⿰土欠}}
 
+====Derived characters====
+* {{l|mul|[[崁]]}}
+
 ===Further reading===
 * {{Han ref|kx=0225.120|dkj=04928|dj=0460.040|hdz=10425.040|uh=574E|ud=22350|bh=A7A2|bd=42914}}
 
