--- a/en/坮/坮.13041.wikitext
+++ b/en/坮/坮.13041.wikitext
@@ -21,7 +21,7 @@ From {{och-l|埋|tr=*m.rˤə}} ({{zh-ref|Baxter and Sagart, 2014}}).
 
 ====Pronunciation====
 {{zh-pron
-|mn=tâi
+|mn=ml,tw,sg:tâi
 |mn-t=dai5
 |cat=v
 }}
