/* Derived terms */ <come#69290554>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -172,7 +172,7 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 |upcome
 |upcoming
 |when one's ship comes in
-}}
+|how came you so|the wheels came off|the wheels came off the bus|the wheels came off the wagon|there's more where that came from|this is where I came in|this is where we came in}}
 
 =====Related terms=====
 <!--merge into the derived terms list if you like-->
