/* Chinese */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <cut#69311313>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -1052,7 +1052,7 @@ From {{bor|yue|en|cut}}.
 # to {{m|en|cut}}, to [[incise]], to [[divide]]
 #: {{zh-x|c{}u{}t{kat1} 開 嚿 牛扒|to cut a steak into pieces|C}}
 # to [[reduce]]
-#: {{zh-x|c{}u{}t{kat1}&nbsp; b{}u{}d{bat1}g{}e{}t{zet4}|to reduce allocated budget|C}}
+#: {{zh-x|c{}u{}t{kat1}&#032; b{}u{}d{bat1}g{}e{}t{zet4}|to reduce allocated budget|C}}
 # to [[enter]] a [[queue]] at the wrong place; to switch directions suddenly
 #: {{zh-x|c{}u{}t{kat1}線|to change lanes when driving|C}}
 # to [[terminate]]; to [[end]]; to [[sever]]
