--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -384,6 +384,7 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 * Norwegian: {{t|no|heterofil}}
 * Polish: {{t+|pl|hetero}}
 * Portuguese: {{t|pt|hétero}}
+* Romanian: {{t+|ro|hetero}}
 * Russian: {{qualifier|slang, noun}} {{t+|ru|натура́л|m}}, {{qualifier|literally, noun is used}} {{t+|ru|гетеросексуа́л|m|tr=getɛrosɛksuál}}, {{t+|ru|стрейт}}
 * Slovak: {{t+|sk|heterosexuálny}}
 * Spanish: {{t|es|hetero}}, {{t|es|hétero}}, {{t+|es|heterosexual}}
