--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -125,6 +125,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 |outcut
 |overcut
 |undercut
+|uncut
 }}
 
 ====Related terms====
