--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -130,6 +130,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 
 ====Related terms====
 {{rel4|en|cut a caper
+|cut a check
 |cut a deal
 |cut a figure
 |cut a rug
