--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -114,6 +114,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 |buzzcut
 |crosscut
 |[[cut and cover]], [[cut-and-cover]]
+|cutaway
 |cut-away
 |cutthroat
 |cutting edge
