--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -141,6 +141,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 |cut capers
 |cut corners
 |cut down
+|cut down to size
 |cut for someone's size
 |cut from the same cloth
 |cut in
