--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -602,7 +602,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 |Cut Bank
 |cutbank
 |offcut
-|point-cut
+|pointcut
 }}
 
 ====Related terms====
