/* Derived terms */ Added term <come#69333313>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -150,6 +150,7 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 |come out with
 |come running
 |come short
+|come the old soldier
 |come through
 |come to
 |come to nothing
