Applied {{col3}} <bridge#69352978>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -84,7 +84,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 # {{lb|en|roller derby}} An elongated [[chain]] of [[teammate]]s, connected to the [[pack]], for improved [[block]]ing potential.
 
 =====Derived terms=====
-{{der3|en|title=Terms derived from ''bridge'' (etymology 1)
+{{col3|en
 |Acton Bridge
 |Apperley Bridge
 |Appley Bridge
@@ -183,7 +183,8 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |Wheatstone bridge
 |Wien bridge
 |Wootton Bridge
-| a bridge too far|air bridge|arch bridge|auction bridge|bascule bridge|bicycle bridge|bikini bridge|bridge and tunnel|bridge bunny|bridge coat|bridge pattern|bridge plug|bridge railing|bridge roll|bridge spider|bridge whist|bridge wire|bridge-and-tunnel|bridge-and-tunneler|bridge-ward|build a bridge and get over it|Buridan's bridge|burn that bridge when one comes to it|bus bridge|cable-stayed bridge|catenary bridge|chain bridge|clapper bridge|contract bridge|cross a bridge before one comes to it|cross that bridge when one gets there|cross that bridge when one gets to it|deck bridge|disulfide bridge|draw bridge|draw-bridge|duplicate bridge|Einstein-Rosen bridge|ER bridge|floating bridge|flying bridge|fore-bridge|frame bridge|glute bridge|green bridge|hand bridge|hoist bridge|I have a bridge to sell you|jet bridge|lattice bridge|leaf bridge|leg bridge|Mabey bridge|Maxwell bridge|media bridge|monkey bridge|movable bridge|nose bridge|oblique bridge|occupation bridge|over bridge|packhorse bridge|paint bridge|pivot bridge|platform bridge|pontoon bridge|rainbow bridge|rope bridge|rubber bridge|salt bridge|skew bridge|sleep under the same bridge|space bridge|straight bridge|through bridge|toll bridge|transporter bridge|trestle bridge|truss bridge|water bridge|wildlife bridge|wire bridge}}
+|a bridge too far|air bridge|arch bridge|auction bridge|bascule bridge|bicycle bridge|bikini bridge|bridge and tunnel|bridge bunny|bridge coat|bridge pattern|bridge plug|bridge railing|bridge roll|bridge spider|bridge whist|bridge wire|bridge-and-tunnel|bridge-and-tunneler|bridge-ward|build a bridge and get over it|Buridan's bridge|burn that bridge when one comes to it|bus bridge|cable-stayed bridge|catenary bridge|chain bridge|clapper bridge|contract bridge|cross a bridge before one comes to it|cross that bridge when one gets there|cross that bridge when one gets to it|deck bridge|disulfide bridge|draw bridge|draw-bridge|duplicate bridge|Einstein-Rosen bridge|ER bridge|floating bridge|flying bridge|fore-bridge|frame bridge|glute bridge|green bridge|hand bridge|hoist bridge|I have a bridge to sell you|jet bridge|lattice bridge|leaf bridge|leg bridge|Mabey bridge|Maxwell bridge|media bridge|monkey bridge|movable bridge|nose bridge|oblique bridge|occupation bridge|over bridge|packhorse bridge|paint bridge|pivot bridge|platform bridge|pontoon bridge|rainbow bridge|rope bridge|rubber bridge|salt bridge|skew bridge|sleep under the same bridge|space bridge|straight bridge|through bridge|toll bridge|transporter bridge|trestle bridge|truss bridge|water bridge|wildlife bridge|wire bridge
+}}
 
 =====Translations=====
 {{trans-top|construction or natural feature that spans a divide}}{{multitrans|data=
