/* Translations */ <United States of America#69361426>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -177,7 +177,7 @@
 * Russian: {{t+|ru|Соединённые Шта́ты Аме́рики|m-p}}, {{t+|ru|Аме́рика|f}}
 * Rusyn: {{t|rue|Споєны Штаты Америцькы|m-p}}
 * Samoan: {{t|sm|Iunaite Sitete o Amerika}}
-* Sanskrit: {{t|sa|अमरेखिकासंयुक्तराज्य}}, {{t|sa|संयुक्तराज्य}}
+* Sanskrit: {{t|sa|अमेरिकायाः संयुक्तराज्यानि}}, {{t|sa|संयुक्तराज्यानि}}
 * Scots: {{t|sco|Unitit States o Americae}}
 * Scottish Gaelic: {{t|gd|Stàitean Aonaichte|alt=Na Stàitean Aonaichte|f-p}}, {{t|gd|Stàitean Aonaichte na h-Aimeireaga|alt=Na Stàitean Aonaichte na h-Aimeireaga|f-p}}
 * Seraiki: {{t|skr|اَمبرِیکَا}}
