--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -320,6 +320,7 @@ The verb is from {{inh|en|enm|braunchen}}, from the noun.
 * Czech: {{t+|cs|pobočka|f}}
 * Danish: {{t+|da|filial|c}}
 * Dutch: {{t+|nl|filiaal|n}}, {{t+|nl|vestiging|f}}
+* Esperanto: {{t|eo|filio}}
 * Estonian: {{t|et|filiaal}}
 * Finnish: {{t|fi|toimipaikka}}; {{t|fi|sivukonttori}}, {{t|fi|haarakonttori}}, {{t|fi|haaraosasto}}, {{t|fi|haaraliike}}
 * French: {{t+|fr|filiale|f}}, {{t+|fr|succursale|f}}
