--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -92,7 +92,7 @@ From {{inh|en|enm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia
 * Adyghe: {{t|ady|Францие}}
 * Afrikaans: {{t+|af|Frankryk}}
 * Akan: {{t|ak|Frɛnkye}}
-* Albanian: {{t|sq|Francë|f}} {{qualifier|indefinite}} {{t+|sq|Franca|f}} {{qualifier|definite}}, {{t|sq|Frëngë|f}}, {{t|sq|Frângë|f}}
+* Albanian: {{t|sq|Francë|f}} {{qualifier|indefinite}} {{t+|sq|Franca|f}} {{qualifier|definite}}, {{t|sq|Frëngjia|f}}, {{t|sq|Frângjia|f}}
 * American Sign Language: {{t|ase|F@NearForehead-HandPalmDown F@NearForehead-HandPalmUp HorizSmallTwist}}
 * Amharic: {{t|am|ፈረንሣይ}}
 * Antillean Creole: {{t|gcf|Frans|f}}
