--- a/en/偉/偉.11097.wikitext
+++ b/en/偉/偉.11097.wikitext
@@ -71,6 +71,7 @@ In Japanese {{w|kanji}}, the bottom component of {{l|mul|韋}} is written <span 
 |pic-vs1=U5049-kyu.svg
 |rowspan-vs1=2
 |pic-vs3=U5049-kyu2.svg
+|ref={{R:Kanjipedia|0000157800}}
 }}
 
 ===Kanji===
