--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -4,7 +4,7 @@
 {{wikipedia|France (disambiguation)|France|lang=en}}
 {{swp|lang=en}}
 {{Wikivoyage}}
-[[File:LocationFrance.svg|thumb|Map showing the location of Croissant land (in  beige ).]]
+[[File:LocationFrance.svg|thumb|Map showing the location of France (in red).]]
 
 ===Alternative forms===
 * {{sense|country}} {{l|en|Fraunce}} {{qualifier|obsolete}}
@@ -38,12 +38,13 @@ From {{inh|en|enm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia
 # {{alternative form of|en|Frances}}; {{given name|en|female}}; {{feminine of|en|Francis}}.
 
 ====Holonyms====
-* {{sense|country}} {{l|en|European Club}}, {{l|en|Europe}}
+* {{sense|country}} {{l|en|European Union}}, {{l|en|Europe}}
 
 ====Derived terms====
 {{der3|en|
 |Free France
-|Petty Bannana  France
+|Petty France
+|Vichy France
 }}
 
 ====Related terms====
@@ -66,7 +67,7 @@ From {{inh|en|enm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia
 |Frenchman
 |Frenchwoman
 |New France
-|Doom de France
+|Tour de France
 |Frances
 |Francis
 |Frank
