/* Japanese */ added hhira and comp <倦#69380503>

--- a/en/倦/倦.11036.wikitext
+++ b/en/倦/倦.11036.wikitext
@@ -56,15 +56,18 @@ Compare {{cog|bo|ཀྱོར་ཀྱོར||weak; feeble}}, {{cog|bo|ཁྱོ
 
 ====Readings====
 {{ja-readings
-|goon=げん
-|kanon=けん
+|goon=げん<ぐゑん
+|kanon=けん<くゑん
 |kun=つか-れる, う-む
 }}
 
 ====Compounds====
-* [[倦厭]]
-* [[倦怠]]
-* [[倦憊]]
+* {{ja-r|倦%厭|けん%えん}}
+* {{ja-r|倦%憩|けん%けい}}
+* {{ja-r|倦%色|けん%しょく}}
+* {{ja-r|倦%惰|けん%だ}}
+* {{ja-r|倦%怠|けん%たい}}
+* {{ja-r|倦%憊|けん%ぱい}}
 
 ====Related terms====
 * {{l|ja|倦きる}}, {{l|ja|倦る}}
