--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -767,7 +767,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 # {{lb|en|chemical engineering|petrochemistry}} The range of [[temperature]]s used to [[distill]] a particular [[mixture]] of [[hydrocarbon]]s from [[crude oil]].
 
 ====Derived terms====
-{{der3|en|title=Terms derived from ''cut'' (noun)|a cut above|a cut below|boot cut|bowl cut|brush cut|budget cut|crew cut|cut of one's jib|cutline|cut-set|die-cut|direct cut|director's cut|final cut|fine cut|French cut|jump cut|line cut|linocut|make the cut|maximum cut|minimum cut|narrow-cut|pay cut|power cut|price cut|prime cut|princess cut|rose cut|shaggy cut|shortcut|s-t cut|tax cut|wide-cut|woodcut|α-cut}}
+{{der3|en|title=Terms derived from ''cut'' (noun)|a cut above|a cut below|boot cut|bowl cut|brush cut|budget cut|crew cut|cut of one's jib|cutline|cut-set|die-cut|direct cut|director's cut|final cut|fine cut|French cut|jump cut|line cut|linocut|make the cut|maximum cut|minimum cut|narrow-cut|pay cut|power cut|price cut|prime cut|princess cut|rose cut|rose-cut|shaggy cut|shortcut|s-t cut|tax cut|wide-cut|woodcut|α-cut}}
 
 ====Translations====
 {{trans-top|act of cutting}}
