--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -692,7 +692,7 @@ Borrowed from {{bor|tl|es|Israel||Israel}}.
 # {{place|cy|country|cont/Asia|t=Israel}}
 
 ====Derived terms====
-* {{l|cy|Gwlad Israel||State of Israel}}
+* {{l|cy|Gwladwriaeth Israel||State of Israel}}
 
 ===Mutation===
 {{cy-mut}}
