--- a/en/愚/愚.15662.wikitext
+++ b/en/愚/愚.15662.wikitext
@@ -82,31 +82,138 @@
 }}
 
 ====Compounds====
-{{top3}}
+{{der-top3|Compounds}}
 * {{ja-r|愚か|おろか}}
 * {{ja-r|愚かしい|おろかし.い}}
+* {{ja-r|愚%案|ぐ%あん}}
+* {{ja-r|愚%闇|ぐ%あん|rom=-}}, {{ja-r|愚%暗|ぐ%あん}}
+* {{ja-r|愚%意|ぐ%い}}
+* {{ja-r|愚%詠|ぐ%えい}}
 * {{ja-r|愚%挙|ぐ%きょ}}
+* {{ja-r|愚%兄|ぐ%けい}}
+* {{ja-r|愚%計|ぐ%けい}}
+* {{ja-r|愚%見|ぐ%けん}}
+* {{ja-r|愚%稿|ぐ%こう}}
+* {{ja-r|愚%考|ぐ%こう}}
 * {{ja-r|愚%行|ぐ%こう}}
 * {{ja-r|愚%妻|ぐ%さい}}
+* {{ja-r|愚%才|ぐ%さい}}
+* {{ja-r|愚%作|ぐ%さく}}
+* {{ja-r|愚%策|ぐ%さく}}
+* {{ja-r|愚%察|ぐ%さつ}}
+* {{ja-r|愚%札|ぐ%さつ}}
+* {{ja-r|愚%姉|ぐ%し}}
+* {{ja-r|愚%者|ぐ%しゃ}}
+* {{ja-r|愚%女|ぐ%じょ}}
+* {{ja-r|愚%書|ぐ%しょ}}
+* {{ja-r|愚%将|ぐ%しょう}}
+* {{ja-r|愚%状|ぐ%じょう}}
 * {{ja-r|愚%人|ぐ%じん}}
-* {{ja-r|愚図る|ぐずる}}
-{{mid3}}
+* {{ja-r|愚%心|ぐ%しん}}
+* {{ja-r|愚%臣|ぐ%しん}}
+* {{ja-r|愚%身|ぐ%しん}}
+* {{ja-r|愚%図|ぐ%ず}}
+** {{ja-r|愚%図%愚%図|ぐ%ず%ぐ%ず}}
+** {{ja-r|愚%図つく|ぐ%ずつく}}
+** {{ja-r|愚%図ら愚%図ら|ぐ%ずらぐ%ずら}}
+** {{ja-r|愚%図り|ぐ%ずり}}
+** {{ja-r|愚%図る|ぐ%ずる}}
+* {{ja-r|愚%推|ぐ%すい}}
 * {{ja-r|愚%生|ぐ%せい}}
-* {{ja-r|愚痴|ぐち}}
+* {{ja-r|愚%拙|ぐ%せつ}}
+* {{ja-r|愚%説|ぐ%せつ}}
+* {{ja-r|愚%僧|ぐ%そう}}
+* {{ja-r|愚%草|ぐ%そう}}
+* {{ja-r|愚%息|ぐ%そく}}
+* {{ja-r|愚%存|ぐ%ぞん}}
+* {{ja-r|愚%痴る|ぐ%ちる}}
+* {{ja-r|愚%痴|ぐ%ち}}
+** {{ja-r|愚%痴っぽい|ぐ%ちっぽい}}
+** {{ja-r|愚%痴%話|ぐ%ち%ばなし}}
+** {{ja-r|愚%痴 無%知|ぐ%ち む%ち}}
+* {{ja-r|愚%知|ぐ%ち|rom=-}}, {{ja-r|愚%智|ぐ%ち}}
+* {{ja-r|愚%忠|ぐ%ちゅう}}
+* {{ja-r|愚%衷|ぐ%ちゅう}}
 * {{ja-r|愚%直|ぐ%ちょく}}
+* {{ja-r|愚%弟|ぐ%てい}}
+* {{ja-r|愚%答|ぐ%とう}}
+* {{ja-r|愚%禿|ぐ%とく}}
 * {{ja-r|愚%鈍|ぐ%どん}}
+* {{ja-r|愚%人|ぐ%にん}}
+* {{ja-r|愚%輩|ぐ%はい}}
+* {{ja-r|愚%筆|ぐ%ひつ}}
+* {{ja-r|愚%夫|ぐ%ふ}}
+* {{ja-r|愚%婦|ぐ%ふ}}
+* {{ja-r|愚%父|ぐ%ふ}}
+* {{ja-r|愚%物|ぐ%ぶつ}}
+* {{ja-r|愚%母|ぐ%ぼ}}
+* {{ja-r|愚%妹|ぐ%まい}}
 * {{ja-r|愚%昧|ぐ%まい}}
 * {{ja-r|愚%民|ぐ%みん}}
+** {{ja-r|愚%民 政%策|ぐ%みん せい%さく}}
+* {{ja-r|愚%命|ぐ%めい}}
+* {{ja-r|愚%迷|ぐ%めい}}
+* {{ja-r|愚%蒙|ぐ%もう}}
 * {{ja-r|愚%問|ぐ%もん}}
-{{mid3}}
+** {{ja-r|愚%問 愚%答|ぐ%もん ぐ%とう}}
+* {{ja-r|愚%慮|ぐ%りょ}}
 * {{ja-r|愚%劣|ぐ%れつ}}
-* {{ja-r|愚%連隊|ぐ%れんたい}}
+* {{ja-r|愚%連%隊|ぐ%れん%たい}}
 * {{ja-r|愚%弄|ぐ%ろう}}
-* {{ja-r|闇%愚|あん%ぐ}}
+* {{ja-r|愚%老|ぐ%ろう}}
+* {{ja-r|愚%陋|ぐ%ろう}}
+* {{ja-r|愚%論|ぐ%ろん}}
+* {{ja-r|暗%愚|あん%ぐ}}
+* {{ja-r|迂%愚|う%ぐ}}
+* {{ja-r|下%愚|か%ぐ}}
+* {{ja-r|頑%愚|がん%ぐ}}
+* {{ja-r|狂%愚|きょう%ぐ}}
+* {{ja-r|軽%愚|けい%ぐ}}
+* {{ja-r|賢%愚|けん%ぐ}}
+* {{ja-r|昏%愚|こん%ぐ}}
+* {{ja-r|至%愚|し%ぐ}}
+* {{ja-r|衆%愚|しゅう%ぐ}}
+* {{ja-r|蠢%愚|しゅん%ぐ}}
+* {{ja-r|大%愚|たい%ぐ}}
+* {{ja-r|痴%愚|ち%ぐ}}
+* {{ja-r|知%愚|ち%ぐ|rom=-}}, {{ja-r|智%愚|ち%ぐ}}
+* {{ja-r|万%愚%節|ばん%ぐ%せつ}}
 * {{ja-r|凡%愚|ぼん%ぐ}}
-* {{ja-r|万愚%節|ばんぐ%せつ}}
 * {{ja-r|庸%愚|よう%ぐ}}
-{{bottom}}
+{{der-bottom}}
+
+===Etymology===
+{{ja-kanjitab|ぐ|yomi=o}}
+From {{der|ja|ltc|sort=く'|-}} {{ltc-l|愚}}.
+
+===Pronunciation===
+{{ja-pron|ぐ|acc=1|acc2=0}}
+
+===Adjective===
+{{ja-adj|infl=na|ぐ}}
+
+# [[foolish]]
+#: {{syn|ja|愚か|tr=oroka}}
+
+====Inflection====
+{{ja-na|ぐ}}
+
+===Noun===
+{{ja-noun|ぐ}}
+
+# [[foolishness]], [[folly]]
+#* {{quote-book|ja|year=1900|author={{lj|田中正造}}|title={{lj|亡國に至るを知らざれば之れ即ち亡國の儀に付質問}}|publisher={{lj|青空文庫}}|url=https://www.aozora.gr.jp/cards/000649/files/4892_10243.html}}
+#*: {{ja-usex|{{...}}己の'''愚'''を知れば則ち愚にあらず、己 の愚なることを知らなければ是が眞の'''愚'''である。|{{...}}おのれ の '''ぐ''' を しれば すなはち ぐ に あらず、おのれ の ぐ なる こと を しらなければ これ が しん の '''ぐ''' で ある。|rom={{...}} onore no '''gu''' o shireba sunawachi gu ni arazu, onore no gu naru koto o shiranakereba kore ga shin no '''gu''' de aru.|{{...}} if you know your own '''foolishness''', then you are not foolish. If you do not know that you are foolish, this is true '''foolishness'''.}}
+
+====Derived terms====
+* {{ja-r|愚にも付かぬ|ぐ に も つかぬ}}
+* {{ja-r|愚に返る|ぐ に かえる}}
+* {{ja-r|愚の骨頂|ぐ の こっちょう}}
+
+===Pronoun===
+{{ja-pos|pronoun|ぐ}}
+
+# {{lb|ja|humble|sort=く'}} [[I]], [[me]]
 
 ----
 
