--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -412,7 +412,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 |make someone hard to catch
 |throw a sprat to catch a mackerel
 |uncatch
-|catch a packet|catch as catch can|catch big air|catch breath|catch cold|catch some z's|catch dust|catch feelings|catch fire|catch napping|catch no balls|catch red-handed|catch someone with a hand in the cookie jar|catch someone's drift|catch someone's eye|catch step|catch wreck|catch you later|catch-'em-alive-O|cony-catch|first catch your hare|you can catch more flies with honey than vinegar|you can catch more flies with honey than with vinegar|you can't catch old birds with chaff|you catch more flies with honey than vinegar|you catch more flies with honey than with vinegar}}
+|catch a packet|catch as catch can|catch big air|catch breath|catch cold|catch some z's|catch dust|catch feelings|catch fire|catch napping|catch no balls|catch red-handed|catch someone with a hand in the cookie jar|catch someone's drift|catch someone's eye|catch step|catch wreck|catch you later|catch-'em-alive-O|cony-catch|first catch your hare|you can catch more flies with honey than vinegar|you can catch more flies with honey than with vinegar|you can't catch old birds with chaff|you catch more flies with honey than vinegar|you catch more flies with honey than with vinegar|caught behind|caught between two stools|caught in the cookie jar|caught looking|caught on the hop|caught raiding the cookie jar|caught short|caught stealing|caught with one's fingers in the cookie jar|caught with one's pants down|caught with the cookie jar|dog that caught the car|don't sell the skin till you have caught the bear|not be caught dead|wouldn't be caught dead}}
 
 ====Translations====
 {{trans-top|to capture or snare}}
