--- a/en/c/caught.6831.wikitext
+++ b/en/c/caught.6831.wikitext
@@ -21,13 +21,16 @@
 
 # {{lb|en|cricket}} Of the [[method]] of being [[out]] in which the [[striker]] hits the ball and a [[fielder]] catches it.
 
+====Derived terms====
+* {{l|en|caught and bowled}}
+
 ===Verb===
 {{head|en|verb form}}
 
 # {{en-past of|catch}}
 
 ====Derived terms====
-* {{l|en|caught with one's hand in the cookie jar}}
+* {{l|en|cot-caught merger}}
 
 [[Category:English irregular past participles]]
 [[Category:English irregular simple past forms]]
