--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -1049,15 +1049,18 @@ From {{bor|yue|en|cut}}.
 ===Verb===
 {{head|zh|verb}} {{tlb|zh|Hong Kong Cantonese}}
 
-# to {{m|en|cut}}, to [[incise]], to [[divide]]
-#: {{zh-x|c{}u{}t{kat1} 開 嚿 牛扒|to cut a steak into pieces|C}}
+# to [[#English|cut]], to [[incise]], to [[divide]]
+#: {{zh-x|'''@c{}u{}t{kat1}''' 開 嚿 牛扒|to cut a steak into pieces|C}}
 # to [[reduce]]
-#: {{zh-x|c{}u{}t{kat1}&#032; b{}u{}d{bat1}g{}e{}t{zet4}|to reduce allocated budget|C}}
+#: {{zh-x|'''@c{}u{}t{kat1}''' &#032; b{}u{}d{bat1}g{}e{}t{zet4}|to reduce allocated budget|C}}
 # to [[enter]] a [[queue]] at the wrong place; to switch directions suddenly
-#: {{zh-x|c{}u{}t{kat1}線|to change lanes when driving|C}}
+#: {{zh-x|'''c{}u{}t{kat1}'''線|to change lanes when driving|C}}
 # to [[terminate]]; to [[end]]; to [[sever]]
-#: {{zh-x|c{}u{}t{kat1}線|to end a call|C}}
-#: {{zh-x|c{}u{}t{kat1}單|to terminate an order|C}}
+#: {{zh-x|'''c{}u{}t{kat1}'''線|to end a call|C}}
+#: {{zh-x|'''c{}u{}t{kat1}'''單|to terminate an order|C}}
+
+===References===
+* {{R:yue:ELHKC}} <!--咭-->
 
 [[Category:Chinese terms written in foreign scripts]]
 
