--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -6,8 +6,9 @@
 {{Han char|rn=72|rad=日|as=05|sn=9|four=60227|canj=AMSH|ids=⿱旦勿}}
 
 ====Derived characters====
-* [[偒]], [[啺]], [[婸]], [[陽]], [[踼]], [[湯]], [[揚]], [[場]], [[逿]], [[腸]], [[𥯕]], [[暘]], [[煬]], [[禓]], [[𥏫]], [[楊]], [[氱]], [[瑒]], [[玚]], [[𦳝]], [[瘍]], [[崵]], [[碭]], [[䵮]], [[颺]], [[愓]], [[㼒]], [[畼]], [[䁑]], [[糃]], [[蝪]], [[諹]], [[䞶]], [[輰]], [[餳]], [[暢]], [[鍚]], [[鰑]], [[䵘]], [[㦹]], [[敭]], [[𣋇]], [[䬗]], [[𤋁]]
-* [[傷]], [[塲]], [[慯]], [[摥]], [[漡]], [[殤]], [[膓]], [[𤳈]], [[觴]], [[鬺]], [[䵰]], [[薚]]
+* {{l|mul|[[偒]], [[啺]], [[場]], [[婸]], [[崵]], [[愓]], [[揚]], [[湯]], [[陽]], [[暘]], [[楊]], [[煬]], [[瑒]]([[玚]]), [[禓]], [[腸]], [[畼]], [[䁑]], [[𥏫]], [[碭]], [[暢]], [[糃]], [[蝪]], [[諹]], [[踼]], [[輰]], [[鍚]], [[餳]], [[鰑]], [[䵘]], [[䵮]]}}
+* {{l|mul|[[逿]], [[㼒]], [[颺]], [[㦹]], [[敭]], [[𣋇]], [[䬗]], [[𦳝]], [[𥯕]], [[瘍]], [[氱]], [[𤋁]], [[薚]]}}
+* {{l|mul|[[傷]], [[塲]], [[慯]], [[摥]], [[漡]], [[殤]], [[膓]], [[𤳈]], [[觴]], [[鬺]], [[䵰]]}}
 
 ====References====
 {{Han ref|kx=0492.170|dkj=13832|dj=0855.170|hdz=21499.070|uh=661C}}
