--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -454,6 +454,8 @@ Cognate with {{cog|stq|flotje|t=to float}}, {{cog|fy|flotsje|t=to float}}, {{cog
 ----
 
 ==Faroese==
+===Etymology===
+See {{m|fo|floti|t=fleet}}
 
 ===Noun===
 {{head|fo|noun}}
