--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -37,6 +37,9 @@ Cognate with {{cog|sco|chuise}}, {{m|sco|cheese||to choose}}, {{cog|frr|kese||to
 =====Conjugation=====
 {{en-conj|stem=choos|old=1|past=chose|past_ptc=chosen|past2=choosed|past2_qual=note1|past_2sg_old2=choosedst|past_ptc2=choosed|past_ptc2_qual=note1|past_ptc3=chose|past_ptc3_qual=note2|note1=Nonstandard.|note2=Colloquial.}}
 
+=====Derived terms=====
+{{der2|en|choose one's battles|choose sides|choose the wrong horse|choose up|choose your own adventure|choose-your-own-adventure|cut and choose|divide and choose|nothing to choose between|pick and choose|right to choose}}
+
 =====Related terms=====
 * {{l|en|choice}}
 * {{l|en|choosy}}
