/* Japanese */ added image of shinjitai in {{ja-kanji forms-IVS}} <偉#69423645>

--- a/en/偉/偉.11097.wikitext
+++ b/en/偉/偉.11097.wikitext
@@ -62,15 +62,10 @@ In Japanese {{w|kanji}}, the bottom component of {{l|mul|韋}} is written <span 
 
 ==Japanese==
 {{ja-kanji forms-IVS
-|vs1=01
-|vs2=05
-|vs3=03
-|col-vs1=aj
-|col-vs2=mj
-|col-vs3=hdmj
-|pic-vs1=U5049-kyu.svg
-|rowspan-vs1=2
-|pic-vs3=U5049-kyu2.svg
+|vs1=03
+|col-vs1=hdmj
+|pic-shin=U5049-j.svg
+|pic-vs1=U5049-kyu2.svg
 |ref={{R:Kanjipedia|0000157800}}
 }}
 
