--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -4,7 +4,7 @@
 * {{a|GA}} {{enPR|yo͞o-nī'tĭd stāts' əv ə-mĕrʹĭ-kə}}, {{IPA|en|/ju.ˌnaɪ.tɪ̈d ˌsteɪts əv əˈmɛɹ.ɪ̈.kə/}}
 * {{a|RP}} {{IPA|en|/juː.ˌnaɪ.tɨd ˌsteɪts əv əˈmɛɹ.ɨ.kə/}}
 * {{audio|en|en-uk-United States of America.ogg|Audio (UK)}}
-* {{rhymes|en|ɛɹɪkə}}
+* {{rhymes|en|ɛɹɪkə|s=9}}
 * {{hyph|en|Unit|ed States of Amer|i|ca}}
 
 ===Proper noun===
