--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -202,6 +202,7 @@ The verb is from {{inh|en|enm|braunchen}}, from the noun.
 * Oroch: {{t|oac|га̄}}
 * Orok: {{t|oaa|гара}}
 * Ossetian: {{t|os|къалиу}}
+* Ottoman Turkish: {{t|ota|دال|tr=dal}}, {{t|ota|بوداق|tr=budak}}
 * Pashto: {{t|ps|خراتګه|f|tr=xarãtga}}, {{t|ps|شاخ|m|tr=šāx}}
 * Pennsylvania German: {{t|pdc|Nascht|m}}
 * Persian: {{t+|fa|شاخه|tr=šâxe|sc=fa-Arab}}, {{t+|fa|شاخ|tr=šâx|sc=fa-Arab}}
