--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -519,6 +519,7 @@ The meaning of ''semen or female ejaculatory discharge'' is considered vulgar sl
 #: {{ux|en|'''Come''' summer, we would all head off to the coast.}}
 #* {{quote-book|1=en|year=1932|year_published=1965|author=Delos W. Lovelace|authorlink=Delos W. Lovelace|title=[[w:King Kong (1933 film)|King Kong]]|page=14|passage="And a long sea voyage that starts at six o'clock '''come''' morning."}}
 #* {{quote-journal|en|date=November 10 2012|author=Amy Lawrence|title=Fulham's Mark Schwarzer saves late penalty in dramatic draw at Arsenal|newspaper=The Guardian|url=http://www.guardian.co.uk/football/2012/nov/10/arsenal-fulham-premier-league|passage='''Come''' the final whistle, Mikel Arteta lay flabbergasted on the turf.}}
+#* {{quote-web|en|url=https://www.hellomagazine.com/celebrities/20221005153414/celine-dion-rare-social-media-post-exciting-music-news/|text=She announced in April that '''come''' 10 February 2023, her songs would be featured in a romantic comedy titled ''It's All Coming Back To Me'' {{...}}|title=Celine Dion ushers in holiday season with exciting music news|first=Beatriz|last=Colon|date=2022-10-05|work=Hello! Magazine}}
 
 =====Usage notes=====
 * {{m|en|came#Preposition|Came}} is sometimes used instead when the events occurred in the past.
