--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -127,6 +127,7 @@ Land tortoises are not native to Australia, yet traditionally freshwater turtles
 * Serbo-Croatian:
 *: Cyrillic: {{qualifier|tortoise or turtle}} {{t|sh|корњача|f|sc=Cyrl}}
 *: Roman: {{qualifier|tortoise or turtle}} {{t+|sh|kornjača|f}}
+* Sicilian: {{t|scn|scuzzària}}
 * Slovak: {{qualifier|tortoise or turtle}} {{t+|sk|korytnačka|f}}
 * Slovene: {{qualifier|tortoise or turtle}} {{t+|sl|želva|f}}, {{t|sl|kopenska želva|f}}
 * Somali: {{t|so|diindiin}}
