--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -24,8 +24,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 #* '''2018''', Raj Patel and Jason W Moore, ''[https://www.theguardian.com/news/2018/may/08/how-the-chicken-nugget-became-the-true-symbol-of-our-era How the chicken nugget became the true symbol of our era]'' in ''The Guardian'', 8 May
 #*: Chicken is already the most popular meat in the US, and is projected to be the planet’s favourite '''flesh''' by 2020.
 # The [[human]] body as a physical entity.
-#* '''c.1530s''', [[s:William Tyndale|William Tyndale]], ''[[s:Bible (Tyndale)|Tyndale Bible]]'', ''[[s:Bible (Tyndale)/Leviticus|Leviticus]]'', 6, x,
-#*: And the preast shall put on his lynen albe and his lynen breches apon his '''flesh''', and take awaye the asshes whiche the fire of the burntsacrifice in the altare hath made, and put them besyde the alter,
+#* {{RQ:Tyndale Pentateuch|Leviticus|6|10|IX|And the preaſt ſhall put on his lynen albe and his lynen breches apon his '''fleſh''', and take awaye the aſſhes whiche the fire of the burntſacrifice in the altare hath made, and put them beſyde the alter, {{...}}}}
 # {{lb|en|religion}} The [[mortal]] body of a human being, contrasted with the [[spirit]] or [[soul]].
 #* {{RQ:KJV|1 Peter|1|24|passage=For all '''flesh''' is as grasse, and all the glory of man as the flowre of grasse: the grasse withereth, and the flowre thereof falleth away.}}
 #* {{RQ:KJV|Galatians|5|17|passage=For the flesh '''lusteth''' against the Spirit, and the spirit against the '''flesh''': and these are contrary the one to the other: so that yee cannot doe the things that yee would.}}
