/* Alternative forms */ <lies#69500250>

--- a/en/l/lies.16986.wikitext
+++ b/en/l/lies.16986.wikitext
@@ -113,7 +113,7 @@ From {{inh|nl|dum|liesche}}. {{etystub|nl}}
 ==Limburgish==
 
 ===Alternative forms===
-* {{alter|li|liist||Eupen}}
+* {{alter|li|Liist||Eupen}}
 
 ===Noun===
 {{head|li|noun|g=f}}
