--- a/en/s/south pole.6995.wikitext
+++ b/en/s/south pole.6995.wikitext
@@ -1,4 +1,4 @@
-{{also|south-pole|southpole|South Pole|South-Pole|Southpole}}
+{{also|southpole|South Pole|South-Pole|Southpole}}
 ==English==
 
 ===Pronunciation===
