--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Etymology===
-Verb from {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluck off}}. Related to {{cog|fy|pûlje|t=to shell, husk}}, {{cog|dum|pullen|t=to drink}}, {{cog|dum|polen|t=to peel, strip}}, {{cog|nds|pulen|t=to pick, pluck, pull, tear, strip off husks}}, {{cog|is|púla|t=to work hard, beat}}.
+Verb from {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluck off}}, of uncertain ultimate origin. Related to {{cog|fy|pûlje|t=to shell, husk}}, {{cog|dum|pullen|t=to drink}}, {{cog|dum|polen|t=to peel, strip}}, {{cog|nds|pulen|t=to pick, pluck, pull, tear, strip off husks}}, {{cog|is|púla|t=to work hard, beat}}.
 
 Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m|enm|pullen|t=to pull}}.
 
