--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -25,6 +25,9 @@ Oracle bone form: {{Han compound|𡿧|日|ls=ic|t1=disaster; floods|t2=sun}} –
 
 ''{{w|Shuowen}}'': Two pieces of flesh ({{zh-l|*仌}}) left to dry in the sun ({{zh-l|*日}}). Original form of {{och-l|腊}}.
 
+===Etymology===
+From {{inh|zh|sit-pro|*s-r(j)ak||night, full 24-hour day, spend the night}} (STEDT, {{zh-ref|Schuessler, 2007}}). {{zh-ref|Wang (1982)}} relate this to {{och-l|夕}} & {{och-l|夜}}; however, see those two entries for more.
+
 ===Pronunciation 1===
 {{zh-pron
 |m=昔
