t+enm:[[hough]] t+ang:[[hōhsinu]] t-balance ([[WT:EDIT|Assisted]]) <hamstring#69513235>

--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -56,10 +56,12 @@
 {{trans-top|to disable}}
 * Arabic: {{t|ar|عَقَرَ}}
 * Bulgarian: {{t+|bg|осакатявам}}, {{t+|bg|контузвам}}
-{{trans-mid}}
 * Finnish: {{t+|fi|lamaannuttaa}}, {{t+|fi|rampauttaa}}
 * French: {{t+|fr|paralyser}}
+{{trans-mid}}
 * Irish: {{t|ga|speir}}
+* Middle English: {{t|enm|hough}}
+* Old English: {{t|ang|hōhsinu|f}}
 {{trans-bottom}}
 
 ===Anagrams===
