--- a/en/感/感.15666.wikitext
+++ b/en/感/感.15666.wikitext
@@ -153,7 +153,7 @@ From {{bor|ja|ltc|-|sort=かん}} {{m|zh|感|tr=kom<sup>X</sup>}}.
 # {{hanja form of|감|[[feeling]]}}
 
 ====Compounds====
-* {{ko-l|감기|[[influenza]]|感氣}}
+* {{ko-l|감기|[[cold]]; [[influenza]]|感氣}}
 * {{ko-l|민감|[[sensitivity]]|敏感}}
 * {{ko-l|죄책감|[[feelings of guilt]] |罪責感}}
 
