--- a/en/感/感.15666.wikitext
+++ b/en/感/感.15666.wikitext
@@ -155,7 +155,7 @@ From {{bor|ja|ltc|-|sort=かん}} {{m|zh|感|tr=kom<sup>X</sup>}}.
 ====Compounds====
 * {{ko-l|감기|[[cold]]; [[influenza]]|感氣}}
 * {{ko-l|민감|[[sensitivity]]|敏感}}
-* {{ko-l|죄책감|[[feelings of guilt]] |罪責感}}
+* {{ko-l|죄책감|feeling of guilt|罪責感}}
 
 ----
 
