--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -12,7 +12,8 @@ The verb became irregular, possibly under the influence of the semantically simi
 ** {{audio|en|en-au-catch.ogg|Audio (AU)}}
 * {{a|US}} {{enPR|kăch|kĕch}}, {{IPA|en|/kæt͡ʃ/|/kɛt͡ʃ/}}
 ** {{audio|en|en-us-catch.ogg|Audio (US)}}
-**Noah Webster's ''American Dictionary'' (1828) regards {{IPAchar|/kɛtʃ/}} as the "popular or common pronunciation."<ref>[http://edl.byu.edu/webster/c/47 Noah Webster, An American Dictionary of the English Language, 1828. byu.edu].</ref> It is labeled "not infreq[uent]" in Kenyon & Knott (1949).<ref>[https://archive.org/stream/pronouncingdicti00unse#page/72/mode/2up Kenyon & Knott, ''A Pronouncing Dictionary of American English''. archive.org]</ref>
+**Noah Webster's ''American Dictionary'' (1828) regards {{IPAchar|/kɛt͡ʃ/}} as the "popular or common pronunciation."<ref>[http://edl.byu.edu/webster/c/47 Noah Webster, An American Dictionary of the English Language, 1828. byu.edu].</ref> It is labeled "not infreq[uent]" in Kenyon & Knott (1949).<ref>[https://archive.org/stream/pronouncingdicti00unse#page/72/mode/2up Kenyon & Knott, ''A Pronouncing Dictionary of American English''. archive.org]</ref>
+* {{a|Southern US|obsolete}} {{enPR|kŏch}}, {{IPA|en|/kɑt͡ʃ/}} {{q|see {{m|en|cotch}}}}<ref>{{R:Hall PGSMS|1|11|40}}</ref>
 * {{rhymes|en|ætʃ|ɛtʃ|s=1}}
 
 ===Noun===
