/* Derived terms */ <mandat#69542615>

--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -18,6 +18,7 @@ From {{der|ca|la|mandātum}}.
 # {{lb|ca|political science}} [[term]]
 
 ====Derived terms====
+* {{l|ca|límit de mandat}}
 * {{l|ca|mandatari}}
 
 ====Related terms====
