/* Derived terms */ <cling#69546238>

--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -43,7 +43,7 @@ From {{inh|en|enm|clingen}}, from {{inh|en|ang|clingan|t=to adhere}}, from {{inh
 # {{lb|en|figurative|with preposition ''to''}} To [[be fond of]], to [[feel]] strongly about and [[dependent]] on.
 
 =====Derived terms=====
-{{der2|en|clingy|{{l|en|cling film}}/[[clingfilm]]|cling on|cling peach|cling to|cling to the skirts of|cling wrap|cling-wrap}}
+{{der2|en|clingy|{{l|en|cling film}}/[[clingfilm]]|cling on|cling peach|cling to|cling to the skirts of|cling wrap|cling-wrap|clinging vine}}
 
 =====Translations=====
 {{trans-top|hold tightly}}
