--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -2,8 +2,7 @@
 ==English==
 
 ===Alternative forms===
-* {{l|en|i. e.}}
-* {{l|en|ie}}
+* {{alt|en|i. e.|ie}}
 
 ===Etymology===
 From {{uder|en|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
