--- a/en/備/備.11180.wikitext
+++ b/en/備/備.11180.wikitext
@@ -23,7 +23,7 @@
 Originally a {{Han compound|亻|箙|ls=psc|c1=s|c2=p|nocap=y}}.
 
 ===Etymology===
-Area word; compare {{cog|my|ပြင်||to get ready; to prepare}}, {{cog|kac|hpra|tr=pʰraʔ³¹|t=to complete}}, {{cog|mnw|ပြေၚ်||to prepare; to arrange for}} ({{zh-ref|Schuessler, 2007}}).
+Area word; compare {{cog|my|ပြင်||to get ready; to prepare}}, {{cog|my|ပြီးပြတ်||t=complete}},{{cog|kac|hpra|tr=pʰraʔ³¹|t=to complete}}, {{cog|mnw|ပြေၚ်||to prepare; to arrange for}} ({{zh-ref|Schuessler, 2007}}).
 
 ===Pronunciation===
 {{zh-pron
