--- a/en/圳/圳.12981.wikitext
+++ b/en/圳/圳.12981.wikitext
@@ -36,7 +36,7 @@
 # [[furrow]] in a [[field]]; small [[drainage]] in a field
 
 ====Compounds====
-{{zh-der|圳溝|嘉南大圳|水圳|八堡圳}}
+{{zh-der|圳溝|水圳}}
 
 ===Pronunciation 2===
 {{zh-pron
