/* Derived terms */ <coat#69568006>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -51,7 +51,7 @@ Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||co
 |ducking coat
 |feathercoat
 |greatcoat
-|overcoat}}
+|overcoat|base coat|blanket-coat|body coat|box coat|bridge coat|buff coat|candy-coat|car coat|claw-hammer coat|clawhammer coat|coat armour|coat check|coat hanger|coat link|coat of mail|coat rack|coat stand|coat trailing|coat tree|coat-hanger|coat-rack|coat-stand|coat-trailing|convoy coat|cut one's coat according to one's cloth|dip coat|dip-coat|Doobon coat|dress coat|duffel coat|duffle coat|fever coat|frock coat|fur coat|glaze coat|house-coat|I'll get my coat|Jacob's coat|lab coat|laboratory coat|leather-coat|long-coat|M.B. coat|mackinaw coat|mast coat|matinee coat|matinée coat|mink coat|Monty coat|morning coat|parge coat|pea coat|pick a hole in someone's coat|pilot coat|Prince Albert coat|red coat|sail coat|seed coat|setting coat|skim coat|skim-coat|Spanish coat|sugar coat|sugar-coat|swagger coat|trench coat|turn coat|turn one's coat|turn-coat|white coat|white coat effect|white coat high blood pressure|white coat hypertension|white coat rule|white coat syndrome|white-coat hypertension|winter coat|wooden coat|wylie-coat|coatgirl|coatroom}}
 
 ====Descendants====
 * {{desc|srn|koto}}
