/* Japanese */ added nanori readings and compounds <慎#69572233>

--- a/en/慎/慎.15713.wikitext
+++ b/en/慎/慎.15713.wikitext
@@ -72,8 +72,14 @@ Note the different forms, corresponds to different forms of [[真]].
 |goon=じん
 |kanon=しん
 |kun=つつし-む, つつしみ
-|nanori=みつ
+|nanori=ちか, のり, まこと, みつ, よし
 }}
+
+====Compounds====
+* {{ja-r|謹%慎|きん%しん}}
+* {{ja-r|慎%始%敬%終|しん%し%けい%しゅう}}
+* {{ja-r|慎%重|しん%ちょう}}
+* {{ja-r|不%謹%慎|ふ%きん%しん}}
 
 ===Proper noun===
 {{ja-pos|proper|しん}}
