/* Korean */ added hun and compounds <愼#69572275>

--- a/en/愼/愼.15695.wikitext
+++ b/en/愼/愼.15695.wikitext
@@ -41,6 +41,13 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|신}}
+{{ko-hanja|삼가다|삼갈|신}}
 
 # {{rfdef|ko|sort=心10}}
+
+====Compounds====
+* {{ko-l|계신|戒愼}}
+* {{ko-l|근신|謹愼}}
+* {{ko-l|불근신|不謹愼}}
+* {{ko-l|신사|愼思}}
+* {{ko-l|신중|愼重}}
