/* Translations */added Italian translation <float#69583137>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -386,8 +386,9 @@ Cognate with {{cog|stq|flotje|t=to float}}, {{cog|fy|flotsje|t=to float}}, {{cog
 * Dutch: {{t+|nl|praalwagen|m}}
 * Finnish: {{t|fi|paraatiauto}}
 * French: {{t+|fr|char|m}}
-{{trans-mid}}
 * German: {{t|de|Festwagen|m}}
+{{trans-mid}}
+* Italian: {{t+|it|carro allegorico|m}}
 * Irish: {{t|ga|flóta|m}}
 * Romanian: {{t+|ro|car alegoric|n}}
 * Russian: {{t+|ru|платфо́рма|f}}
