--- a/en/f/flaxen.6882.wikitext
+++ b/en/f/flaxen.6882.wikitext
@@ -54,3 +54,29 @@ From {{inh|en|enm|flaxen}}, {{m|enm|flexon}}, {{m|enm|flexin}}, from {{inh|en|an
 [[Category:en:Browns]]
 [[Category:en:Colors]]
 [[Category:en:Fabrics]]
+
+----
+
+==Middle English==
+
+===Alternative forms===
+* {{alter|enm|flexin|flexon}}
+
+===Etymology===
+{{inh+|enm|ang|fleaxen}}; equivalent to {{af|enm|flax|-en|id2=made of|t2=made of}}.
+
+===Pronunciation===
+* {{IPA|enm|/ˈflaksən/|/flɛksən/}}
+
+===Adjective===
+{{enm-adj}}
+
+# {{tlb|enm|rare|Late ME}} {{l|en|flaxen|Flaxen}}; made out of [[flax]].
+
+====Descendants====
+* {{desc|en|flaxen}}
+
+====References====
+* {{R:MED Online|entry=flexen|pos=adj|id=MED16321}}
+
+[[Category:enm:Fibers]]
