/* Middle English */ <flaxen#69584657>

--- a/en/f/flaxen.6882.wikitext
+++ b/en/f/flaxen.6882.wikitext
@@ -75,6 +75,7 @@ From {{inh|en|enm|flaxen}}, {{m|enm|flexon}}, {{m|enm|flexin}}, from {{inh|en|an
 
 ====Descendants====
 * {{desc|en|flaxen}}
+* {{desc|yol|vlaxen}}
 
 ====References====
 * {{R:MED Online|entry=flexen|pos=adj|id=MED16321}}
